--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
     <section>
         <h3>Description</h3>
+        <h4>Description</h4>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
             Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
             when an unknown printer took a galley of type and scrambled it to make a type specimen book.
