--- a/about.html
+++ b/about.html
@@ -8,9 +8,9 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contacts</a></li>                
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./about.html">About</a></li>
+                <li><a href="./contacts.html">Contacts</a></li>                
             </ul>
         </nav>
     </header>
