--- a/index.html
+++ b/index.html
@@ -1,49 +1,47 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>AT Playwrigh Typescript</title>
-</head>
-<body>
-
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contacts</a></li>                
-            </ul>
-        </nav>
+      <nav>
+        <ul>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./about.html">About</a></li>
+          <li><a href="./contacts.html">Contacts</a></li>
+        </ul>
+      </nav>
     </header>
 
     <main>
-        <h1>Welcome to our page</h1>
-    <section>
-        <input type="text" placeholder="Search..."/>
+      <h1>Welcome to our page</h1>
+      <section class="search-bar">
+        <input type="text" placeholder="Search..." />
         <button>Search</button>
-    </section>
+      </section>
 
-    <section>
-        <img width="250" alt="Test Image" src="./assets/image1.jpg"/>
-        <img width="250" alt="Test Image" src="./assets/image2.jpg"/>
-        <img width="250" alt="Test Image" src="./assets/image3.jpg"/>
-    </section>
+      <section class="image-container">
+        <img alt="Test Image" src="./assets/image1.jpg" />
+        <img alt="Test Image" src="./assets/image2.jpg" />
+        <img alt="Test Image" src="./assets/image3.jpg" />
+      </section>
 
-    <section>
+      <section class="description">
         <h3>Description</h3>
         <h4>Description</h4>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
-            when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-            It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-            It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-            and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-    </section>
-
+        <p>
+          Lorem Ipsum is simply dummy text of the printing and typesetting
+          industry. Lorem Ipsum has been the industry's standard dummy text ever
+          since the 1500s, when an unknown printer took a galley of type and
+          scrambled it to make a type specimen book.
+        </p>
+      </section>
     </main>
 
     <footer>
-        <p>&#169; All rights reserved.</p>
+      <p>&#169; All rights reserved.</p>
     </footer>
-
-</body>
+  </body>
 </html>
