--- a/about.html
+++ b/about.html
@@ -2,18 +2,18 @@
 <html>
 <head>
     <title>About the company</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-
     <header>
         <nav>
-            <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./about.html">About</a></li>
-                <li><a href="./contacts.html">Contacts</a></li>                
-            </ul>
+          <ul>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./about.html">About</a></li>
+            <li><a href="./contacts.html">Contacts</a></li>
+          </ul>
         </nav>
-    </header>
+      </header>
 
     <main>
         <h1>About our company</h1>
@@ -22,15 +22,14 @@
         <br></br>
     </section>
 
-    <section>
-        <img width="250" alt="Test Image" src="./assets/image4.jpg"/>
+    <section class="image-container">
+        <img alt="Test Image" src="./assets/image4.jpg"/>
     </section>
 
     <section>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
         <p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
     </section>
-
     </main>
 
     <footer>
